trying to fix line wrapping on website

--- a/master.css
+++ b/master.css
@@ -135,8 +135,7 @@ ul.intro {
 }
 
 ul.pubs > li{
-	margin-bottom: 1.2em;
-	margin-left: ;
+	margin-bottom: 1.2em;	
 }
 
 .aParent div {
